# monadic

./: Cargo.toml  README.md
shaders/: blit.wgsl  fft.wgsl  fhn.wgsl  rd.wgsl  wave.wgsl
src/: app.rs  fft.rs  fhn.rs  frequency.rs  lattice.rs  main.rs  phase.rs  rd.rs  renderer.rs  shape.rs  spectrum.rs  state.rs  ui.rs
