[package]
name = "monadic"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "22.1"
egui = "0.29"
egui-winit = "0.29"
egui-wgpu = "0.29"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
